# stratum

./: .bazelrc  .clang-format  .clang-tidy  .codecov.yml  .dockerignore  .gitattributes  .gitignore  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.ci  Dockerfile.dev  Dockerfile.np4intel.dev  NOTICE  README.md  WORKSPACE  build-p4-sde-docker.sh  build-p4-sde.sh  build_np4intel_image.sh  building-new.txt  building.txt  copy.bara.sky  google_to_github.bara.sky  hal_lib_common__  process.yml  release.sh  setup_dev_env.sh  setup_np4intel_dev_env.sh  transforms.txt
.circleci/: bazelrc  build-targets.txt  cdlang-targets.txt  check-bazel-format.sh  check-cpp-format.sh  check-cpplint.sh  check-markdown.sh  clang-tidy-targets.txt  codecov.sh  config.yml  config_template.yml  gcov-wrapper.sh  generate-config  generate-config.go  generate-config.sh  generated_config.yml  lint-markdown.sh  p4c-fpm-targets.txt  test-targets.txt  workspace_status.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: lint-and-style.yml
.github/actions/stratum-builder/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.yml  codeql-analysis.yml
.jenkins/: run-job.sh
.reuse/: dep5
bazel/: defs.bzl  deps.bzl  rules.bzl  workspace_rule.bzl
bazel/google/: rules.bzl
bazel/patches/: BUILD  gnmi_client.patch  grpc.patch  ygot.patch
bazel/rules/: BUILD  binary_rule.bzl  build_tools.bzl  lexyacc.bzl  library_rule.bzl  license.bzl  p4c_build_defs.bzl  p4c_ir_defs.bzl  package_rule.bzl  platform_rules.bzl  proto_gen.bzl  proto_rule.bzl  test_rule.bzl  yang_to_proto_rule.bzl
build_util/: BUILD.gnmi  BUILD.googleapis  BUILD.p4runtime  rules.bzl
build_util/google/: rules.bzl
build_util/rules/: binary_rule.bzl  library_rule.bzl  package_rule.bzl  proto_rule.bzl  test_rule.bzl
docs/: conf.py  index.md
hello-world/: BUILD  hello-world.cc
legal/: BUILD  LICENSE-bcm-opennsa.md  LICENSE.bcm-sdklt.txt  LICENSE.intel-sde.txt  NOTICE.bmv2.txt  NOTICE.common.txt  NOTICE.intel-sde.txt  NOTICE.json.txt  NOTICE.opennsa.txt  NOTICE.p4c.txt  NOTICE.pi.txt  NOTICE.sdklt.txt  NOTICE.yaml.txt
stratum/: BUILD
stratum/docs/: configurators.md  extenting_stratum_bcm.md  logging_guide.md  phal.md  phal_development_tutorial.md  release_plan.md  releases_plan.md  setup_guide_barefoot_tofino_onos.md  testing.md
stratum/docs/gnmi/: README.md  supported-paths.md
stratum/docs/plantuml/: bcm_class.puml  bcm_switch_startup.puml  build_images.sh  configure_switch.puml  sfp_configurator.puml  sfp_configurator_class.puml  switch_configurator.puml  switch_configurator_class.puml
stratum/docs/tai/: README.md  doc.md
stratum/glue/: BUILD  init_google.h  integral_types.h  logging.cc  logging.h  platform.h  stamping.cc  stamping.h  stamping_linkstamp.cc
stratum/glue/gnmi/: BUILD
stratum/glue/gnoi/: BUILD
stratum/glue/gtl/: BUILD  cleanup.h  cleanup_test.cc  enum_set.h  enum_set_test.cc  flat_hash_map.h  flat_hash_map_test.cc  flat_hash_set.h  flat_hash_set_test.cc  map_util.h  map_util_test.cc  node_hash_set.h  node_hash_set_test.cc  source_location.h  stl_util.h
stratum/glue/net_util/: BUILD  absl_test.cc  bits.cc  bits.h  bits_test.cc  ipaddress.cc  ipaddress.h  ipaddress_test.cc  ports.cc  ports.h
stratum/glue/status/: BUILD  canonical_errors.cc  canonical_errors.h  posix_error_space.cc  posix_error_space.h  posix_error_space_test.cc  status.cc  status.h  status_macros.cc  status_macros.h  status_test.cc  status_test_util.cc  status_test_util.h  status_test_util_test.cc  statusor.cc  statusor.h  statusor_test.cc
stratum/hal/config/: BUILD  Dockerfile  accton7710_bcm_chassis_config_minimal.pb.txt  accton7710_bcm_chassis_map_minimal.pb.txt  bcm_hardware_specs.pb.txt  chassis_config_migrator.cc  config_validator_main.cc  example_phal_init_config.pb.txt  platform_config_test.bzl  tofino_chassis_config_migrator.cc
stratum/lib/: BUILD  constants.h  macros.h  macros_test.cc  signal_waiter.cc  signal_waiter.h  signal_waiter_test.cc  stamping_example_main.cc  test_main.cc  timer_daemon.cc  timer_daemon.h  timer_daemon_test.cc  utils.cc  utils.h  utils_test.cc  version_variables.h  version_variables_linkstamp.cc
stratum/lib/barefoot/: BUILD.bazel  Dockerfile  README  bf_interface.cc  bf_interface.h
stratum/lib/barefoot/examples/: BUILD.bazel  Makefile  test.c  test.cc
stratum/lib/channel/: BUILD  channel.cc  channel.h  channel_internal.h  channel_mock.h  channel_test.cc  test_main.cc
stratum/lib/libcproxy/: BUILD  libcwrapper.cc  libcwrapper.h  passthrough_proxy.cc  passthrough_proxy.h
stratum/lib/p4runtime/: BUILD  entity_management.cc  entity_management.h  p4runtime_fixture.h  p4runtime_session.cc  p4runtime_session.h  sdn_controller_manager.cc  sdn_controller_manager.h  stream_message_reader_writer_mock.h
stratum/lib/security/: BUILD  README.md  auth_policy_checker.cc  auth_policy_checker.h  auth_policy_checker_mock.h  auth_policy_checker_test.cc  cert_utils.cc  cert_utils.h  cert_utils_test.cc  certificate.cc  certificate.h  certificate_test.cc  credentials_manager.cc  credentials_manager.h  credentials_manager_mock.h  credentials_manager_test.cc  test.proto  test_main.cc
stratum/p4c_backends/: README.md
stratum/pipelines/: .gitignore  README.md
stratum/portage/: BUILD  build_defs.bzl  dummy_main.cc
stratum/procmon/: BUILD  procmon.cc  procmon.h  procmon.proto  procmon_main.cc  procmon_service_impl.cc  procmon_service_impl.h  procmon_test.cc
stratum/tools/: BUILD  Dockerfile.stratum_tools  gnoi-dummy-client.py
tools/: gnoi-dummy-client.py  onos-cfg-to-chassis-cfg.py  release-stratum.sh  run_unit_tests.sh  start_bazel_remote_cache.sh
tools/gnmi/: BUILD  README.md  gnmi-cli.py  gnmi_cli.cc
tools/gnmi-go-cli/: BUILD  README.md  gnmi_request.sh
tools/mininet/: .dockerignore  BUILD  Dockerfile  README.md  build-stratum-bmv2-container.sh  host-cmd.sh  stratum.py  tofino-model.py
tools/ssl/: generate-certs.sh
tools/tls/: ca.conf  generate-certs.sh  grpc-client.conf
(+1338 files in other folders)
